manifests/screencast/templates/ingress.yaml

# Source: gobletqa-chart/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "goblet-screencast-ingress"
  labels:
    "app.kubernetes.io/name": "goblet-screencast"
    "app.kubernetes.io/managed-by": "Helm"
  annotations:
    "helm.sh/chart": "gobletqa-chart-0.0.0"
spec:
  ingressClassName: nginx
  rules:
  - host: "screencast.dev.gobletqa.app"
    http:
      paths:
      - backend:
          serviceName: goblet-screencast
          servicePort: 7006
        path: /
        pathType: ImplementationSpecific
  - host: "*.screencast.dev.gobletqa.app"
    http:
      paths:
      - backend:
          serviceName: goblet-screencast
          servicePort: 7006
        path: /
        pathType: ImplementationSpecific
  - host: "screencast.dev.gobletqa.app"
    http:
      paths:
      - backend:
          serviceName: goblet-screencast
          servicePort: 26369
        path: /
        pathType: ImplementationSpecific
  - host: "*.screencast.dev.gobletqa.app"
    http:
      paths:
      - backend:
          serviceName: goblet-screencast
          servicePort: 26369
        path: /
        pathType: ImplementationSpecific
